# python-sucks

./: .env  .gitignore  astro.config.mjs  manage.py  package-lock.json  package.json  pyproject.toml
devops/: nginx  pythonsucks.service  pythonsucks.socket
public/static/.github/workflows/: deploy.yml
public/static/css/: blog.css
pythonsucks/: asgi.py  settings.py  urls.py  wsgi.py
pythonsucks/article/: admin.py  apps.py  models.py  urls.py  views.py
pythonsucks/article/migrations/: 0001_initial.py  0002_article_tags.py
pythonsucks/article/templatetags/: excerpt.py
pythonsucks/static/css/: blog.css  bootstrap.min.css
pythonsucks/templates/: index.html
pythonsucks/templates/articles/: detail.html  list.html
scripts/: export_to_devto.py  tweet_post.py
src/: content.config.ts
src/components/: Blog.astro
src/content/posts/: change-number-like-list.md  is_vs_equal.md  x-equal-ten.md
src/content/posts/gists/ru/: copy_vs_deepcopy_gist1.md
src/content/posts/learn-python/en/: conditional-operators.md  data-types.md  variables-and-names.md  what-does-del-do.md  what-is-python.md
src/content/posts/learn-python/ru/: conditional-operators.md  data-types.md  variables-and-names.md  what-does-del-do.md  what-is-python.md
src/data/: categories.ts
src/i18n/: en.ts  index.ts  ru.ts
src/layouts/: Layout.astro
src/pages/: all-posts.astro  index.astro  rss.xml.js
src/pages/en/: all-posts.astro  index.astro  rss.xml.js
src/pages/en/posts/: [...slug].astro
src/pages/og/: [...slug].png.ts
src/pages/posts/: [...slug].astro  [slug].astro
(+20 files in other folders)
